add class lazy to img

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
 						<div class="col-lg-6 col-md-6 col-sm-12 col-12">
 							<a href="thanks.html" target="_blank">
 								<div class="logo-block">
-									<img src="img/logo.png" alt="логотип VR II" class="logo-img">
+									<img data-src="img/logo.png" src="" alt="логотип VR II" class="logo-img lazy">
 									<p class="logo-text">Производство и продажа VR очков. <br> Доставка по всей России.</p>
 								</div>
 							</a>
@@ -46,11 +46,11 @@
 					<button class="btn button btn-order_vrbox">Заказать vr box 2</button>
 					<div class="row">
 						<div class="col-lg-6 col-md-6 col-sm-6 col-6 wow fadeInLeft slower">
-							<img class="main-img-left" src="img/main/photo1.png" alt="">
+							<img class="main-img-left lazy" data-src="img/main/photo1.png" src="" alt="">
 						</div>
 
 						<div class="col-lg-6 col-md-6 col-sm-6 col-6 wow fadeInUp slower">
-							<img src="img/main/photo3.png" alt="" class="main-img-right">
+							<img data-src="img/main/photo3.png" src="" alt="" class="main-img-right lazy">
 						</div>
 
 					</div>
@@ -68,7 +68,7 @@
 
 						<div class="row about-vrbox-set">
 								<div class="about-vrbox-img-double ">
-									<img src="img/about-vrbox/set1.png" alt="set-vrbox">
+									<img data-src="img/about-vrbox/set1.png" src="" class="lazy" alt="set-vrbox">
 									<h5>Bluetooth-пульт</h5>
 									<p>для дистанционного <br>управления очками</p>
 								</div>
@@ -100,7 +100,7 @@
 						
 					<div class="col-lg-5 col-md-12 col-sm-12">
 						<div class="about-vrbox-img">
-							<img class="wow bounceInRight" data-wow-duration="2s" src="img/about-vrbox/set1.png" alt="set-vrbox">
+							<img class="wow bounceInRight lazy" data-wow-duration="2s" src="" data-src="img/about-vrbox/set1.png" alt="set-vrbox">
 							<h5>Bluetooth-пульт</h5>
 							<p>для дистанционного <br>управления очками</p>
 						</div>
@@ -113,11 +113,11 @@
 		<div class="container">
 				<div class="row functions">
 					<div class="functions-img col-lg-6 col-md-6 col-sm-12 col-12">
-						<img src="img/functions_vrbox/ph1.png" alt="vrbox travel around world" class="functions-img-left">
-						<img src="img/functions_vrbox/diamond2.svg" alt="diamond icon" class="functions-img-diamond1 rellax" data-rellax-speed="2">
+						<img data-src="img/functions_vrbox/ph1.png" src="" alt="vrbox travel around world" class="functions-img-left lazy">
+						<img src="img/functions_vrbox/diamond2.svg" src="" alt="diamond icon" class="functions-img-diamond1 rellax lazy" data-rellax-speed="2">
 					</div>
 					<div class="media functions-right col-lg-6 col-md-6 col-sm-12 col-12">
-						<img src="img/functions_vrbox/video-icon.png" class="mr-3" alt="...">
+						<img data-src="img/functions_vrbox/video-icon.png" src="" class="mr-3 lazy" alt="...">
 						<div class="media-body">
 							<h5 class="mt-0 functions-title">Просмотр фильмов, сериалов и видео на Youtube</h5>
 							<p> В совершенно новом формате 3D, как перед 6-ти метровым экраном! Также просмотр любых фильмов в формате 2D!</p> 
@@ -126,16 +126,16 @@
 				</div>
 				<div class="row functions">
 					<div class="media functions-left col-lg-6 col-md-6 col-sm-12 col-12">
-						<img src="img/functions_vrbox/world_icon.png" class="mr-3" alt="...">
+						<img data-src="img/functions_vrbox/world_icon.png" src="" class="mr-3 lazy" alt="...">
 						<div class="media-body">
 							<h5 class="mt-0 functions-title">Путешествия по миру с помощью панорамного изображения!</h5> 
 							<p>А также тест драйв автомобилей, погружение на дно океана, полеты в космос, виртуальный секс и многое другое. </p> 
 						</div>
 					</div>
 					<div class="functions-img functions-img-right col-lg-6 col-md-6 col-sm-12 col-12">
-						<img src="img/functions_vrbox/girl.png" alt="" class="functions-img-girl">
-						<img src="img/functions_vrbox/ph2.png" alt="vrbox video " class="functions-img-car">
-						<img src="img/functions_vrbox/diamon1.svg" alt="diamond icon" class="functions-img-diamond2 rellax" data-rellax-speed="2">
+						<img data-src="img/functions_vrbox/girl.png" src="" alt="" class="functions-img-girl lazy">
+						<img data-src="img/functions_vrbox/ph2.png" src="" alt="vrbox video " class="functions-img-car lazy">
+						<img data-src="img/functions_vrbox/diamon1.svg" src="" alt="diamond icon" class="functions-img-diamond2 rellax lazy" data-rellax-speed="2">
 					</div>
 				</div>
 		</div>
@@ -151,11 +151,11 @@
 							<p class="order-text">Только мы сотрудничаем с производителем и осуществляем прямые поставки с производства</p>
 							<div class="order-adventages">
 								<div class="order-adventage">
-									<img src="img/order/Watch.png" alt="watch icon">
+									<img data-src="img/order/Watch.png" src="" class="lazy" alt="watch icon">
 									<p>Принимаем заявки <br> 24 часа в сутки! <br> 7 дней в неделю!</p>
 								</div>
 								<div class="order-adventage">
-									<img src="img/order/Bag.png" alt="bag icon">
+									<img data-src="img/order/Bag.png" src="" class="lazy" alt="bag icon">
 									<p>Быстрая доставка и <br> оплата при получении</p>
 								</div>
 							</div>
@@ -177,11 +177,11 @@
 
 						<div class="order-adventages-2">
 								<div class="order-adventage">
-									<img src="img/order/Watch.png" alt="watch icon">
+									<img data-src="img/order/Watch.png" src="" class="lazy" alt="watch icon">
 									<p>Принимаем заявки <br> 24 часа в сутки! <br> 7 дней в неделю!</p>
 								</div>
 								<div class="order-adventage">
-									<img src="img/order/Bag.png" alt="bag icon">
+									<img data-src="img/order/Bag.png" src="" class="lazy" alt="bag icon">
 									<p>Быстрая доставка и <br> оплата при получении</p>
 								</div>
 						</div>
@@ -195,11 +195,11 @@
 		<div class="container">
 				<div class="row functions">
 					<div class="functions-img col-lg-6 col-md-6 col-sm-12 col-12">
-						<img src="img/functions_vrbox/ph3.png" alt="vrbox travel around world" class="functions-img-left_sport">
-						<img src="img/functions_vrbox/diamond3.svg" alt="diamond icon" class="functions-img-diamond3 rellax" data-rellax-speed="5">
+						<img data-src="img/functions_vrbox/ph3.png" src="" alt="vrbox travel around world" class="functions-img-left_sport lazy">
+						<img data-src="img/functions_vrbox/diamond3.svg" src="" alt="diamond icon" class="functions-img-diamond3 rellax lazy" data-rellax-speed="5">
 					</div>
 					<div class="media functions-right col-lg-6 col-md-6 col-sm-12 col-12">
-						<img src="img/functions_vrbox/ball.png" class="mr-3" alt="...">
+						<img data-src="img/functions_vrbox/ball.png" src="" class="mr-3 lazy" alt="...">
 						<div class="media-body">
 							<h5 class="mt-0 functions-title">Симуляция экстремальных видов спорта</h5>
 							<p> Почувствуйте на себе эмоции от прыжка с парашютом или спуска на сноуборде со склона горы. </p>
@@ -208,15 +208,15 @@
 				</div>
 				<div class="row functions">
 					<div class="media functions-left col-lg-6 col-md-6 col-sm-12 col-12">
-						<img src="img/functions_vrbox/world_icon.png" class="mr-3" alt="...">
+						<img data-src="img/functions_vrbox/world_icon.png" src="" class="mr-3 lazy" alt="...">
 						<div class="media-body">
 							<h5 class="mt-0 functions-title">Играйте в игры с эффектом полного погружения! </h5> 
 							<p>Полное погружение в игры на смартфоне, а так же на ПК через программу TRINUS.  </p> 
 						</div>
 					</div>
 					<div class="functions-img functions-img-right col-lg-6 col-md-6 col-sm-12 col-12">
-						<img src="img/functions_vrbox/ph4.png" alt="vrbox video " class="functions-img-right_game">
-						<img src="img/functions_vrbox/diamond4.svg" alt="diamond icon" class="functions-img-diamond4 rellax" data-rellax-speed="5">
+						<img data-src="img/functions_vrbox/ph4.png" src="" alt="vrbox video " class="functions-img-right_game lazy">
+						<img data-src="img/functions_vrbox/diamond4.svg" src="" alt="diamond icon" class="functions-img-diamond4 rellax lazy" data-rellax-speed="5">
 					</div>
 				</div>
 
@@ -228,28 +228,28 @@
 			<h2 class=" title title-center">Как это работает</h2>
 			<div class="row">
 				<div class="col-lg-3 col-md-3 col-sm-6 col-6 how_work-column wow fadeInDown" data-wow-delay="">
-					<img src="img/how_work/phone.png" alt="">
+					<img data-src="img/how_work/phone.png" src="" class="lazy" alt="">
 					<div class="circle-border">
 						<span>1</span>
 					</div>
 					<p class="how_work-text">Скачай на смартфон приложения, игры, фильмы. </p>
 				</div>
 				<div class="col-lg-3 col-md-3 col-sm-6 col-6 how_work-column wow fadeInDown" data-wow-delay="0.6s">
-					<img src="img/how_work/watch.png" alt="">
+					<img data-src="img/how_work/watch.png" src="" class="lazy" alt="">
 					<div class="circle-border">
 						<span>2</span>
 					</div>
 					<p class="how_work-text">Вставь смартфон в очки виртуальной реальности. </p>
 				</div>
 				<div class="col-lg-3 col-md-3 col-sm-6 col-6 how_work-column wow fadeInDown" data-wow-delay="1.2s">
-					<img src="img/how_work/glass.png" alt="">
+					<img data-src="img/how_work/glass.png" src="" class="lazy" alt="">
 					<div class="circle-border">
 						<span>3</span>
 					</div>
 					<p class="how_work-text">Наслаждайся абсолютно непередаваемыми эмоциями. </p>
 				</div>
 				<div class="col-lg-3 col-md-3 col-sm-6 col-6 how_work-column wow fadeInDown" data-wow-delay="1.8s">
-					<img src="img/how_work/control_desk.png" alt="">
+					<img data-src="img/how_work/control_desk.png" src="" class="lazy" alt="">
 					<div class="circle-border">
 						<span>4</span>
 					</div>
@@ -260,7 +260,7 @@
 	</section>
 
 	<section class="compatibility">
-		<img class="diamond rellax" src="img/compatibility/coub.svg" alt="" data-rellax-speed="4">
+		<img class="diamond rellax lazy" data-src="img/compatibility/coub.svg" src="" alt="" data-rellax-speed="4">
 		<div class="container">
 			<h2 class="title">Совместимость очков</h2>
 			<div class="row compatibility-vrbox">
@@ -268,19 +268,19 @@
 					<div class="row compatibility-versions">
 						<div class="col-lg-4 col-md-4 col-sm-4 col-4">
 							<div class="compatibility-version">
-								<img src="img/compatibility/iphone.png" alt="iphone">
+								<img data-src="img/compatibility/iphone.png" class="lazy" src="" alt="iphone">
 								<p>ios</p>
 							</div>
 						</div>
 						<div class="col-lg-4 col-md-4 col-sm-4 col-4">
 							<div class="compatibility-version">
-								<img src="img/compatibility/htc_one.png" alt="android">
+								<img data-src="img/compatibility/htc_one.png" class="lazy" src="" alt="android">
 								<p>android</p>
 							</div>
 						</div>
 						<div class="col-lg-4 col-md-4 col-sm-4 col-4">
 							<div class="compatibility-version">
-								<img src="img/compatibility/Windows-10.png" alt="windows">
+								<img data-src="img/compatibility/Windows-10.png" class="lazy" src="" alt="windows">
 								<p>windows</p>
 							</div>
 						</div>
@@ -288,7 +288,7 @@
 				</div>
 				<div class="col-lg-6 ">
 					<div class="compatibility-glasses">
-						<img src="img/compatibility/glasses.png" alt="glasses">
+						<img data-src="img/compatibility/glasses.png" class="lazy" src="" alt="glasses">
 						<p>VR BOX-2 подойдет для любой модели смартфона с диагональю экрана от 3.5 до 6 люйдмов.</p>
 					</div>
 				</div>
@@ -302,7 +302,7 @@
 				<h2 class="title">Виртуальная реальность <br>в очках vr box</h2>
 				<a class="play_video-vrbox" href="#">
 					<div class="vr-real-icon">
-						<img src="img/vr_real/play_market.png" alt="play market">
+						<img data-src="img/vr_real/play_market.png" src="" alt="play market" class="lazy">
 					</div>
 				</a>
 				<a class="play_video-vrbox" href="#"><p>Смотреть видео</p></a>
@@ -315,26 +315,26 @@
 			<div class="container">
 				<h2 class="title title-center">Более 100 игр и приложений для VR BOX II</h2>
 				<div class="apps-icons">
-					<img src="img/apps/a-icon.png" alt="" class="apps-icon">
-					<img src="img/apps/play.png" alt="" class="apps-icon">
-					<img src="img/apps/windows.png" alt="" class="apps-icon">
+					<img data-src="img/apps/a-icon.png" src="" alt="" class="apps-icon lazy">
+					<img data-src="img/apps/play.png" src="" alt="" class="apps-icon lazy">
+					<img data-src="img/apps/windows.png" src="" alt="" class="apps-icon lazy">
 				</div>
 				<div class="apps-descriptions">
 					<div class="apps-description">
-						<img src="img/apps/iPhone-6S-Gold.png" alt="img app">
+						<img data-src="img/apps/iPhone-6S-Gold.png" src="" alt="img app" class="lazy">
 						<h4>Titans of Space</h4>
 						<p>Бесплатное приложение «Titans of Space» позволит вам совершить виртуальную поездку по нашей солнечной системе. При этом вы получите много интересной информации о небесных телах. </p>
 					</div>
 					<div class="apps-description">
 						<div class="apps-img">
-							<img src="img/apps/EL-16_blaster.png" alt="img app">
-							<img class="blaster" src="img/apps/blaster1.png" alt="">
+							<img data-src="img/apps/EL-16_blaster.png" src="" class="lazy" alt="img app">
+							<img class="blaster lazy" data-src="img/apps/blaster1.png" src="" alt="">
 						</div>
 						<h4>Zombie Shooter</h4>
 						<p>Одна из популярных игр «Zombie Shooter VR» В ней вы истребляете полчища зомби, исследуете темные пещеры и заброшенные шахты. </p>
 					</div>
 					<div class="apps-description">
-						<img src="img/apps/iphone3.png" alt="img app">
+						<img data-src="img/apps/iphone3.png" src="" class="lazy" alt="img app">
 						<h4>Sisters</h4>
 						<p>Игра «Sisters» имеет форму интерактивного фильма ужасов для Android-устройств: вы находитесь в гостиной, где можете осмотреться. При этом вокруг вас происходят странные вещи. </p>
 					</div>
@@ -346,13 +346,13 @@
 		<section class="feedback">
 			<div class="container">
 				<h2 class="title title-center">Отзывы довольных клиентов</h2>
-				<img class="feedback-icon" src="img/feedbacks/message-icon.svg" alt="">
+				<img class="feedback-icon lazy" data-src="img/feedbacks/message-icon.svg" src="" alt="">
 					<div class="feedback-slider">
 							<div class="feedback-col">
 								<div class="feedback-column">
 									<div class="media">
 										<div class="media-left">
-												<img class="media-object feedback-photo" src="img/feedbacks/photo.jpg" alt="photo">
+												<img class="media-object feedback-photo lazy" data-src="img/feedbacks/photo.jpg" src="" alt="photo">
 										</div>
 										<div class="media-body">
 											<h4 class="media-heading feedback-name">Дмитрий Фомин. 30 лет <br> г. Санкт-Петербург</h4>
@@ -368,7 +368,7 @@
 								<div class="feedback-column">
 									<div class="media">
 										<div class="media-left">
-												<img class="media-object feedback-photo" src="img/feedbacks/photo.jpg" alt="photo">
+												<img class="media-object feedback-photo lazy" data-src="img/feedbacks/photo.jpg" src="" alt="photo">
 										</div>
 										<div class="media-body">
 											<h4 class="media-heading feedback-name">Дмитрий Фомин. 30 лет <br> г. Санкт-Петербург</h4>
@@ -384,7 +384,7 @@
 								<div class="feedback-column">
 									<div class="media">
 										<div class="media-left">
-												<img class="media-object feedback-photo" src="img/feedbacks/photo.jpg" alt="photo">
+												<img class="media-object feedback-photo lazy" data-src="img/feedbacks/photo.jpg" src="" alt="photo">
 										</div>
 										<div class="media-body">
 											<h4 class="media-heading feedback-name">Дмитрий Фомин. 30 лет <br> г. Санкт-Петербург</h4>
@@ -400,7 +400,7 @@
 								<div class="feedback-column">
 									<div class="media">
 										<div class="media-left">
-												<img class="media-object feedback-photo" src="img/feedbacks/photo.jpg" alt="photo">
+												<img class="media-object feedback-photo lazy" data-src="img/feedbacks/photo.jpg" src="" alt="photo">
 										</div>
 										<div class="media-body">
 											<h4 class="media-heading feedback-name">Дмитрий Фомин. 30 лет <br> г. Санкт-Петербург</h4>
@@ -417,32 +417,32 @@
 		</section>
 
 		<section class="our_work">
-			<img src="img/our_work/Coub1.svg" alt="" class="our_work-diamond rellax" data-rellax-speed="6">
+			<img data-src="img/our_work/Coub1.svg" src=""  alt="" class="our_work-diamond rellax lazy" data-rellax-speed="6">
 			<div class="container">
 				<h2 class="title title-center">Как мы работаем</h2>
 				<div class="row our_work-items">
 						<div class="our_work-item col-lg-3 col-md-6 col-sm-6 col-6">
 							<div class="our_work-img">
-								<img src="img/our_work/ow1.png" alt="">
+								<img data-src="img/our_work/ow1.png" src="" class="lazy" alt="">
 							</div>
 							<p>Вы оставляете заявку на нашем сайте либо по телефону:
 								<span>+79104551703</span> </p>
 						</div>
 						<div class="our_work-item col-lg-3 col-md-6 col-sm-6 col-6">
 							<div class="our_work-img">
-								<img src="img/our_work/ow2.png" alt="">
+								<img data-src="img/our_work/ow2.png" src="" class="lazy" alt="">
 							</div>
 							<p>Мы связываемся с вами, подтверждаем ваш заказ. </p>
 						</div>
 						<div class="our_work-item col-lg-3 col-md-6 col-sm-6 col-6">
 							<div class="our_work-img">
-								<img src="img/our_work/ow3.png" alt="">
+								<img data-src="img/our_work/ow3.png" src="" class="lazy" alt="">
 							</div>
 							<p>Мы организовываем доставку по всей России либо вы забираете самовывозом. (возможно только в Москве) </p>
 						</div>
 						<div class="our_work-item col-lg-3 col-md-6 col-sm-6 col-6">
 							<div class="our_work-img">
-								<img src="img/our_work/ow4.png" alt="">
+								<img data-src="img/our_work/ow4.png" src="" class="lazy" alt="">
 							</div>
 							<p>Вы оплачиваете заказ при получении. </p>
 						</div>
@@ -460,11 +460,11 @@
 								<p class="order-text">Только мы сотрудничаем с производителем и осуществляем прямые поставки с производства</p>
 								<div class="order-adventages">
 									<div class="order-adventage">
-										<img src="img/order/Watch.png" alt="watch icon">
+										<img data-src="img/order/Watch.png" src="" class="lazy" alt="watch icon">
 										<p>Принимаем заявки <br> 24 часа в сутки! <br> 7 дней в неделю!</p>
 									</div>
 									<div class="order-adventage">
-										<img src="img/order/Bag.png" alt="bag icon">
+										<img data-src="img/order/Bag.png" src="" class="lazy" alt="bag icon">
 										<p>Быстрая доставка и <br> оплата при получении</p>
 									</div>
 								</div>
@@ -486,11 +486,11 @@
 
 						<div class="order-adventages-2">
 								<div class="order-adventage">
-									<img src="img/order/Watch.png" alt="watch icon">
+									<img data-src="img/order/Watch.png" src="" class="lazy" alt="watch icon">
 									<p>Принимаем заявки <br> 24 часа в сутки! <br> 7 дней в неделю!</p>
 								</div>
 								<div class="order-adventage">
-									<img src="img/order/Bag.png" alt="bag icon">
+									<img data-src="img/order/Bag.png" src="" class="lazy" alt="bag icon">
 									<p>Быстрая доставка и <br> оплата при получении</p>
 								</div>
 						</div>
@@ -514,7 +514,7 @@
 						<div class="col-lg-6">
 							<a href="index.html">
 								<div class="logo-block">
-									<img src="img/logo.png" alt="логотип VR II" class="logo-img">
+									<img data-src="img/logo.png" src="" alt="логотип VR II" class="logo-img lazy">
 									<p class="logo-text">Производство и продажа VR очков. <br> Доставка по всей России. </p>
 								</div>
 							</a>
