delete lazy from first screen

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
 						<div class="col-lg-6 col-md-6 col-sm-12 col-12">
 							<a href="thanks.html" target="_blank">
 								<div class="logo-block">
-									<img data-src="img/logo.png" src="" alt="логотип VR II" class="logo-img lazy">
+									<img data-src="img/logo.png" src="" alt="логотип VR II" class="logo-img">
 									<p class="logo-text">Производство и продажа VR очков. <br> Доставка по всей России.</p>
 								</div>
 							</a>
@@ -46,11 +46,11 @@
 					<button class="btn button btn-order_vrbox">Заказать vr box 2</button>
 					<div class="row">
 						<div class="col-lg-6 col-md-6 col-sm-6 col-6 wow fadeInLeft slower">
-							<img class="main-img-left lazy" data-src="img/main/photo1.png" src="" alt="">
+							<img class="main-img-left " data-src="img/main/photo1.png" src="" alt="">
 						</div>
 
 						<div class="col-lg-6 col-md-6 col-sm-6 col-6 wow fadeInUp slower">
-							<img data-src="img/main/photo3.png" src="" alt="" class="main-img-right lazy">
+							<img data-src="img/main/photo3.png" src="" alt="" class="main-img-right">
 						</div>
 
 					</div>
