--- a/src/thanks.html
+++ b/src/thanks.html
@@ -19,7 +19,7 @@
 						<div class="col-lg-6 col-md-6 col-sm-12 col-12">
 							<a href="index.html">
 								<div class="logo-block">
-									<img data-src="img/logo.png" src="" alt="логотип VR II" class="logo-img lazy">
+									<img data-src="img/logo.png" src="" alt="логотип VR II" class="logo-img ">
 									<p class="logo-text">Производство и продажа VR очков. <br> Доставка по всей России. </p>
 								</div>
 							</a>
