--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,8 @@
 	<title>Vr Box</title>
 
 	<!-- Bootstrap core CSS -->
-	<link rel="preload" as="style" href="css/all_styles.css" onload="this.rel='stylesheet'">
-	<link href="css/style.css" rel="preload" as="style" onload="this.rel='stylesheet'">
+	<link  href="css/all_styles.css" rel="stylesheet">
+	<link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
