--- a/src/thanks.html
+++ b/src/thanks.html
@@ -6,8 +6,8 @@
 
 	<title>Спасибо за заявку</title>
 
-	<link rel="preload" as="style" href="css/all_styles.css" onload="this.rel='stylesheet'">
-	<link href="css/style.css" rel="preload" as="style" onload="this.rel='stylesheet'">
+	<link  href="css/all_styles.css" rel="stylesheet">
+	<link href="css/style.css" rel="stylesheet">
 </head>
 <body>
 	<main class="main main-thanks">
