--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 	<title>Vr Box</title>
-
+	<link rel="preload" href="css/all_styles.css" as="style">
+	<link rel="preload" href="css/style.css" as="style">
 	<!-- Bootstrap core CSS -->
 	<link  href="css/all_styles.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">
