--- a/src/thanks.html
+++ b/src/thanks.html
@@ -5,6 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 	<title>Спасибо за заявку</title>
+	<link rel="preload" href="css/all_styles.css" as="style">
+	<link rel="preload" href="css/style.css" as="style">
 
 	<link  href="css/all_styles.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">
