add preload for fonts

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,9 @@
 	<title>Vr Box</title>
 	<link rel="preload" href="css/all_styles.css" as="style">
 	<link rel="preload" href="css/style.css" as="style">
+	<link rel="preload" href="/fonts/HelveticaNeueCyr-Black.woff2" as="font">
+	<link rel="preload" href="/fonts/HelveticaNeueCyr-Medium.woff2" as="font">
+	<link rel="preload" href="/fonts/HelveticaNeueCyr-Bold.woff2" as="font">
 	<!-- Bootstrap core CSS -->
 	<link  href="css/all_styles.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">
